# battleship

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.sqlx/: query-0b2f444f36572ca8f072efecea628c634231b06b9cd77677d5026c00ae770738.json  query-1568b5ea82d844da39dc37f70a4129d89e3c8b6cd91d7738774445a66fa1338e.json  query-39e83c6ab9294d5b771f3e01ed3709e9ab08d8cf1287b325a0df57521c2d83bc.json  query-6108a32cad01040d876e139b882da3d6a28c448b5a0ad12a67d8e77c64e7c230.json  query-652e975a09db7acd6dd0ff4d6ad190061f9dbc07b97158fe8ad7b22d5aad39c8.json  query-665ac234d9b9e5e6a3be6a54de8474a11586e3bbe9c5295b8566c3ff9334a8c3.json  query-838ff3277798d0d63e57eb6cbc5c921b36ce8fa8e34cc8b415c43f4163793a3a.json  query-857420051fa315bca4851b922420fbbeb009b5546471b2f86bafa733e8ccf221.json  query-886c680debfa2b3b79615056239aa68b9befd5e8fa0d710c0acd9fd5898d3708.json  query-8f8213cf51509cca2706438456f58e958c32a307b5c1eb87c4469347bf5458f6.json  query-91373ba2f6f9907be9ba0280e49b8886fcc60e7debfe0580325c3767f0af7410.json  query-a2c3b8b4c2ff313bbea7ba16d106a04dd9c162a5ddddec674fcca6fe9e347ac8.json  query-ae4cbc5afe767fbbceeb6c056dbbab2abcd3a8066bd48dde6cb559e4a74d73e9.json  query-e16ac18c9148efc1618f67bd68216eb7d27113847b63eae595b48c756f72ca11.json  query-f37db03b228702d59233d66c799d520adc9e2e74688ea17b4c36b5abc0fabaa4.json  query-f9c94f686e78e9d6ca5a68d658e333a1791de7353faef131f0c6b6d07a0aad16.json
app/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
migrations/: 0001_battleship.sql  0001_schema.sql  0002_triggers.sql
src/: board.rs  game.rs  main.rs
(+10 files in other folders)
