[package]
name = "battleship"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socketioxide = { version = "0.14.1", features = ["state", "tracing"] }
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
